Fix viewport width issue on iOS devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass&display=swap');
 
 html, body {
+    position: fixed;
     width: 100%;
     height: 100%;
     margin: 0px;
